Get started page Ok with link on homepage

--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -15,7 +15,7 @@
                     <a class="home-button dark-button" href="{{ path("profil_my_profil") }}">Mon Espace</a>
                     <a class="home-button dark-button d-flex align-items-center justify-content-center" href="{{ path("app_logout") }}">Déconnexion</a>
                 </div>
-                <a href="{{ path('faq') }}" class="home-button light-button text-uppercase">Bien démarrer sur KYOSC</a>
+                <a href="{{ path('get-started') }}" class="home-button light-button text-uppercase">Bien démarrer sur KYOSC</a>
             {% else %}
                 <a href="{{ path('app_login') }}" class="home-button dark-button text-uppercase">Se connecter</a>
                 <a href="{{ path('app_register') }}" class="home-button light-button text-uppercase">Créez votre compte</a>
